clarify description of R CMD BATCH

--- a/IntroToSnakemake.qmd
+++ b/IntroToSnakemake.qmd
@@ -451,7 +451,7 @@ In contrast to earlier scripts, you can see two differences:
 
 - In addition to the `{file}` wildcard, there is a second wildcard `{n}` in the output file.
 - The rule has an additional `envmodules:` block that can be used to specify one or several environment modules that should be activated using `module load ...` before running the rule. This is a great way to specify specific software versions that  should be used in a `snakemake` workflow and an important feature to make your workflows reproducible.
-- Instead of a `shell:` block that gives the commands to be run on the terminal, this rule uses a `script:` block that lists a (not yet existing) script to run. It would also have been possible to run the script from a `shell:` block, e.g. using `Rscript myscript.R` or `R CMD BATCH myscript.R`. While these approaches might be preferable in certain cases, for example because they would allow you to capture the R session including console input and output, they will be more difficult to implement for certain aspects, like getting parameters from `snakemake` (see below).
+- Instead of a `shell:` block that gives the commands to be run on the terminal, this rule uses a `script:` block that lists a (not yet existing) script to run. Actually, it is possible to put any shell command into a `shell:` block, including one that runs a Python or an R script, like `python myscript.py` or `R CMD BATCH myscript.R output.txt`. While these approaches might be preferable in certain cases, for example because they would allow you to capture the R session including console input and output, they will be more difficult to implement for certain aspects, like getting parameters from `snakemake` (see below).
 
 ### Write an R script that counts words and outputs the most frequent ones
 
