--- a/IntroToSnakemake.qmd
+++ b/IntroToSnakemake.qmd
@@ -631,10 +631,10 @@ Then, copy the following text into the empty file `reports/01_wordcloud.qmd` and
 ````{include}
 ---
 title: "Wordcloud"
-output: 
+format: 
     html:
-        toc: true
         embed-resources: true
+        table-of-contents: true
 date: today
 params:
     topdir: "/tachyon/groups/gbioinfo/stadler/documents/teaching/snakemake_intro"
